# apac

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  cpp.hint  small_test.c
.github/workflows/: aarch64_gcc.yml  x64_gcc.yml  x64_msvc.yml
Benchmarks/benchmark_tools/: pinToCoreZero.c  toggle_tb.c
Benchmarks/tests/: build_tests.bat  fib_test.c
benchmarks/benchmark_tools/: getCPUTime_Freq.c  pinToCoreZero.c  toggle_tb.c
examples/: factorial.c  fibonacci.c
include/: apac.h
install/lib/: apac.lib
install/release/lib/: apac_static.lib  libapac.lib
myBenchmarks/benchmark_tools/: benchmarkTools.h  getCPUTime_Freq.c  toggle_tb.c
src/: apacExport.h
src/apn/: _apn_thresholds.h  apn_def.h  apn_thresholds.h
src/apn/apn_add_sub/: apn_add_sub.c
src/apn/apn_cpy/: apn_cpy.c
src/apn/apn_mul/: apn_mul.c
src/apn/apn_negate/: apn_negate.c
src/apn/arm64/: arm64_hidden_funcs.h  cmp.c  cpu_params.c  cpy.c  is_zero.c  set.c
src/apn/arm64/sysv_abi/: add_n.s  add_one.s  addmul_one.s  lshift_lt64.s  mul_bc.s  neg.s  rshift_lt64.s  sqr_bc.s  sub_n.s  sub_one.s  submul_one.s
src/apn/assembly/alderlake/: _apn_add_n.asm  _apn_mul_basecase.asm  _apn_sub_n.asm
src/apn/c_src/: apn_addmul_one.c  apn_clamp.c  apn_cmp.c  apn_cpy.c  apn_div.c  apn_is_zero.c  apn_lshift_add_sub.c  apn_negate.c  apn_set.c  apn_set_to_random.c  apn_shift.c  apn_sqr.c  apn_sub.c  apn_submul_one.c  basecase_mul.c  dnc_div.c  karatsuba_mul.c  toomcook32_mul.c  toomcook3_mul.c  toomcook3_sqr.c
src/apn/common/apn_add_sub/: apn_add_sub.c  apn_add_sub.h
src/apn/common/apn_cpy/: apn_cpy.c  apn_cpy.h
src/apn/commons/: _basecase_mul.c  _hidden_mul.h  _karatsuba_mul.c  apn_add.c  apn_addmul_one.c  apn_clamp.c  apn_cmp.c  apn_cpy.c  apn_div.c  apn_div_one.c  apn_div_rem_one.c  apn_is_equal.c  apn_is_zero.c  apn_lshift_add_sub.c  apn_mul.c  apn_mul_one.c  apn_negate.c  apn_set.c  apn_set_random.c  apn_set_to_random.c  apn_shift.c  apn_sqr.c  apn_sub.c  apn_submul_one.c  apn_thresholds.h  basecase_div.c  basecase_mul.c  basecase_sqr.c  div_helpers.c  dnc_div.c  dnc_div_rem.c  hidden_div.h  hidden_helpers.c  hidden_helpers.h  hidden_mul.h  hidden_sqr.h  karatsuba_mul.c  karatsuba_sqr.c  lshift_add_sub.c  mul_dispatcher.c  (+6 more)
src/apn/commons/apn_add/: apn_add.c
src/apn/commons/apn_cpy/: apn_cpy.c
src/apn/commons/apn_mul/: _basecase_mul.c  _hidden_mul.h  _karatsuba_mul.c  apn_mul.c
src/apn/commons/apn_negate/: apn_negate.c
src/apn/commons/apn_set/: apn_set.c
src/apn/commons/apn_sub/: apn_sub.c
src/apn/commons/c_headers/: apn_thresholds.h  hidden_div.h  hidden_helpers.h  hidden_mul.h  hidden_sqr.h
src/apn/commons/c_src/: apn_add.c  apn_addmul_one.c  apn_clamp.c  apn_cmp.c  apn_cpy.c  apn_div.c  apn_div_one.c  apn_is_zero.c  apn_lshift_add_sub.c  apn_mul.c  apn_negate.c  apn_set.c  apn_shift.c  apn_sqr.c  apn_sub.c  apn_submul_one.c  basecase_div.c  basecase_mul.c  basecase_sqr.c  div_helpers.c  dnc_div.c  dnc_div_rem.c  karatsuba_mul.c  karatsuba_sqr.c  toomcook32_mul.c  toomcook3_mul.c  toomcook3_sqr.c
src/apn/headers/: apn.h  hidden_div.h  hidden_mul.h  hidden_sqr.h  ntt_primes.h
src/apn/x64/: _adc_apn_add_n.asm  _add_n.asm  _add_n_one.asm  _add_n_one_till_carry.asm  _cpy.c  _mul_bc.asm  _mul_bc_mulx.asm  _mul_bc_mulx_adx.asm  _neg.asm  _sbb_apn_sub_n.asm  _set.c  _sub_n.asm  _sub_n_one.asm  _sub_n_one_till_borrow.asm  add_n.asm  add_n_one.asm  add_n_one_till_carry.asm  addmul_one.asm  apac_thresholds.h  cmp.c  cpu_params.c  cpy.c  is_equal.c  is_zero.c  mul_bc.asm  mul_one.asm  neg.asm  recip_word_calc.c  set.c  sqr_bc.asm  sub_n.asm  sub_n_one.asm  sub_n_one_till_borrow.asm  submul_one.asm  udiv.c  x64_hidden_funcs.h  x64_uarch_params.h
src/apn/x64/_add/: _add_n.asm  _add_n_one.asm  _add_n_one_till_carry.asm
src/apn/x64/_cpy/: _cpy_avx.c  _cpy_avx512f.c  _cpy_sse2.c
src/apn/x64/_mul_bc/: _mul_bc_mulx_adx.asm
src/apn/x64/_neg/: _neg.asm
src/apn/x64/_set/: _set_avx.c  _set_avx512f.c  _set_sse2.c
src/apn/x64/_sub/: _sub_n.asm  _sub_n_one.asm  _sub_n_one_till_borrow.asm
src/apn/x64/alderlake/: _apn_basecase_mul.asm  _apn_cpy.asm
src/apn/x64/apn_add_sub/: apn_add_sub.c  apn_add_sub.h
src/apn/x64/apn_cmp/: apn_cmp.c
src/apn/x64/apn_cpy/: apn_cpy.c
src/apn/x64/apn_mul/: _basecase_mul.c  _hidden_mul.h  _karatsuba_mul.c  apn_mul.c
src/apn/x64/apn_negate/: apn_negate.c  apn_negate.h
src/apn/x64/apn_set/: apn_set.c
src/apn/x64/assembly/: _adc_add_n.asm  _adc_add_one.asm  _adc_apn_add_n.asm  _adc_mul_basecase.asm  _adc_mulx_mul_basecase.asm  _adc_till_carry.asm  _adx_mulx_mul_basecase.asm  _sbb_apn_sub_n.asm  _sbb_sub_n.asm  _sbb_sub_one.asm  _sbb_till_borrow.asm
src/apn/x64/c_src/: cmp.c  cpu_params.c  cpy.c  is_zero.c  ntt_avx2_fma.c  ntt_avx512_ifma52.c  ntt_avx_fma.c  set.c  (+3 more)
src/apz/: apz_add.c  apz_cpy.c  apz_def.h  apz_free.c  apz_get_as_str.c  apz_init.c  apz_init_cpy.c  apz_init_from_str.c  apz_init_one.c  apz_init_random.c  apz_init_zero.c  apz_resize.c  apz_set_one.c  apz_set_random.c  apz_set_to_str.c  apz_set_to_zero.c  apz_size_in_base.c  apz_str_size_in_base.c
src/benchmark_tools/: pinToCoreZero.c
src/header/: apac_internal.h
src/headers/: apac_internal.h
src/misc/: apacGetCPUSpec.c  apacInit.c  apacInitDefault.c  apacSetMemFuncs.c  apac_get_cpu_spec.c  apac_init.c  apac_init_alloc.c  apac_set_mem_funcs.c  apac_utilities.c  getCPUSpec.c  misc.h  setMemFuncs.c
src/misc/getCPUSpec/: getCPUSpec.c  getCPUSpec.h
src/multithreading/: parallel_for.c  parallel_for.h
src/threadpool/: threadpool.c  threadpool.h
tests/: apac_tests.c  apn_tests.c  fib_print.c  fib_test.c  test_apn_add.c  test_apn_add_n.c  test_apn_add_one.c  test_apn_addmul_one.c  test_apn_cmp.c  test_apn_cpy.c  test_apn_div.c  test_apn_div_one.c  test_apn_is_zero.c  test_apn_lshift.c  test_apn_mul.c  test_apn_mul_n.c  test_apn_mul_one.c  test_apn_neg.c  test_apn_rshift.c  test_apn_set.c  test_apn_sqr.c  test_apn_sub.c  test_apn_sub_n.c  test_apn_sub_one.c  test_apn_submul_one.c
tuning/: apn_tune.c  apn_tuning.c
utilities/: apac_utilities.c  apac_utilities.h
(+70 files in other folders)
